# ziwa

./: Cargo.toml  README.md  docker-compose.yml  entrypoint.sh  history.txt  redpanda.yaml
migrations/: 20230424113714_initial.sql
src/: client.rs  main.rs  rpc.rs  server.rs
