[package]
name = "ziwa"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
actix = "*"
actix-rt = "*"
actix-service = "*"
actix-server = "*"
actix-utils = "*"

bytes = "*"

clap = "*"

env_logger = "*"

futures-core = { version = "*", default-features = false, features = ["alloc"] }
futures-util = { version = "*", default-features = false, features = ["alloc"] }
mio = { version = "*", features = ["os-poll", "net"] }
num_cpus = "*"
serde = "*"
socket2 = "*"
tokio = { version = "*", features = ["io-util", "sync", "rt-multi-thread", "macros", "fs"] }
tokio-uring = { version = "0.4", optional = true }

aws-creds = "*"
aws-region = "*"
rust-s3 = "*"

rayon = "*"

surrealdb = "1.0.0-beta.8"

tracing = "*"
tracing-subscriber = "*"

ulid = "*"

walkdir = "*"

[dependencies.postcard]
version = "1"
features = ["alloc"]
