[package]
name = "ziwa"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
actix = "*"
actix-rt = "*"
actix-service = "*"
actix-server = "*"
actix-utils = "*"

anyhow = "*"

base64 = "*"
bytes = "*"

bincode = "*"

clap = "*"

env_logger = "*"

faktory = "*"
rdkafka = { version = "*", features = ["tokio"] }

futures-core = { version = "*", default-features = false, features = ["alloc"] }
futures-util = { version = "*", default-features = false, features = ["alloc"] }
mio = { version = "*", features = ["os-poll", "net"] }
num_cpus = "*"
serde = "*"
serde_json = "*"
socket2 = "*"
tokio = { version = "*", features = ["io-util", "sync", "rt-multi-thread", "macros", "fs"] }
tokio-uring = { version = "0.4", optional = true }

mime-sniffer = "0.1.2"

aws-creds = "0.34"
aws-region = "0.25"
rust-s3 = { version = "0.33", features = ["with-tokio"] }
tokio-stream = "*"

strum = "0.24"
strum_macros = "0.24"

rayon = "*"

sha2 = "*"

# surrealdb = "1.0.0-beta.9"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "json" ] }

time = "0.3"

tracing = "*"
tracing-subscriber = "*"

ulid = { version = "*", features = ["serde"] }

walkdir = "*"
